# binance-wss

./: .dockerignore  .env.example  .gitignore  API_EJEMPLOS.md  Dockerfile.api  Dockerfile.dashboard  README.md  docker-compose.yml  pyproject.toml
airflow-local/: binance_etl_dag.py
airflow-local/dags/: binance_etl_dag.py
dashboard/: app.py
notebooks/: data_explote.ipynb
src/binance_wss/: api.py  main.py  run_api.py  run_etl_once.py
src/binance_wss/app/: app.py  db.py  main.py  settings.py
src/binance_wss/app/api/: klines.py  kpis.py  route.py
src/binance_wss/app/models/: mongo_models.py
src/binance_wss/app/services/: kpi_service.py
src/binance_wss/config/: settings.py
src/binance_wss/data/: extract.py  load.py  transform.py
src/binance_wss/extract/: binance_client.py
src/binance_wss/load/: mongo_loader.py
src/binance_wss/models/: mongo_models.py
src/binance_wss/transform/: kline_processor.py
